fix logo on tablet

--- a/shops/101977/blocks/menu/logo.css
+++ b/shops/101977/blocks/menu/logo.css
@@ -22,3 +22,10 @@
     position: relative;
     left: -50px;
 }
+
+@media (min-device-width: 480px) and (max-device-width: 930px) {
+    #home > div > header > div.header-wrapper > div.container > div.logo {
+        position: relative;
+        left: 0px;
+    }
+}
